--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <link rel="stylesheet" href="fonts/fonts.css">
+    <link rel="stylesheet" type="text/css" href="styles/globals.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Сложно сосредоточиться</title>
   </head>
   <body class="page">
@@ -34,7 +38,62 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__no_focus">no focus</h1>
+      <p class="header__title">Что делать, когда не можешь делать ничего
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <div class="header__decorations">
+        <div class="header__decorations_group">
+          <div class="header__decorations_item_top"></div>
+          <div class="header__decorations_item_bottom"></div>
+        </div>
+      </div>
+      <div class="header__lighting">
+        <div class="header__lighting_rec">REC</div>
+        <div class="header__lighting_ellipse"></div>
+      </div>
+
     </header>
+    <main>
+      <section>
+        <h2>Почему сосредоточиться так сложно</h2>
+        <div>
+          <h3>
+            Многозадачность
+          </h3>
+          <p>
+            Особенно сложно сосредоточиться, когда задач много и все они — важные.
+            Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)?
+            А дело в том, что её просто не существует. Исследователи
+            <span><a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a></span>,
+            что мозгу тяжело концентрироваться даже на двух делах одновременно.
+            А когда в поле внимания попадает несколько важных задач, организм паникует
+            и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
+            мы работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
+        </div>
+        <div>
+          <h3>
+            Дофамин
+          </h3>
+          <p>
+            С гормонами стресса всё понятно, но дальше — ещё интереснее.
+            В нашей невозможности сосредоточиться замешана
+            и полная противоположность стрессу — дофамин.
+            Это вещество участвует в системе вознаграждения мозга.
+            Причём тут он? Мы часто отвлекаемся от важной задачи на что-то
+            более «приятное» для мозгов. Например, смотрим лайки в соцсетях.
+            В это время и выделяется дофамин — и мы чувствуем удовольствие.
+            Получается замкнутый круг: чем больше отвлекаешься,
+            тем больше удовольствия получаешь.
+          </p>
+        </div>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer></footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
