--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
-    <link href="fonts/fonts.css" rel="stylesheet">
-    <link href="styles/variables.css" rel="stylesheet" type="text/css">
-    <link href="styles/globals.css" rel="stylesheet" type="text/css">
-    <link href="styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="./fonts/fonts.css" rel="stylesheet">
+    <link href="./styles/variables.css" rel="stylesheet" type="text/css">
+    <link href="./styles/globals.css" rel="stylesheet" type="text/css">
+    <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
+    <link href="./styles/dark.css" rel="stylesheet" type="text/css">
+    <link href="./styles/light.css" rel="stylesheet" type="text/css">
     <meta charset="UTF-8"/>
     <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
@@ -25,8 +27,8 @@
             </li>
             <li class="header__theme-menu-item">
                 <button
-                        class="header__theme-menu-button header__theme-menu-button_type_auto"
-
+                        class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+                    disabled
                 >
                     авто
                 </button>
@@ -41,15 +43,17 @@
         </ul>
     </nav>
     <h1 class="header__no_focus">no focus</h1>
-    <p class="header__title">Что делать, когда не можешь делать ничего<br>
-        Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-    <div class="header__decorations">
-        <div class="header__decorations_group">
-            <div class="header__decorations_item_top"></div>
-            <div class="header__decorations_item_bottom"></div>
-        </div>
+    <div class="header__title title-decorations">
+        <p>Что делать, когда не можешь делать ничего</p>
+        <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </div>
-    <div class="header__lighting">
+<!--    <div class="header__decorations">-->
+<!--        <div class="header__decorations_group">-->
+<!--            <div class="header__decorations_item_top"></div>-->
+<!--            <div class="header__decorations_item_bottom"></div>-->
+<!--        </div>-->
+<!--    </div>-->
+    <div class="header__lighting" aria-hidden="true">
         <div class="header__lighting_rec">REC</div>
         <div class="header__lighting_ellipse"></div>
     </div>
@@ -59,7 +63,7 @@
         <h2 class="content__block_header">Почему сосредоточиться так сложно</h2>
       <div class="content__block_content_box">
         <article class="content__block_article">
-          <h3 class="content__block_article_header">
+          <h3 class="content__block_article_header title-decorations">
             Многозадачность
           </h3>
           <div class="content__block_article_text">
@@ -79,7 +83,7 @@
           </div>
         </article>
         <article class="content__block_article">
-          <h3 class="content__block_article_header">
+          <h3 class="content__block_article_header title-decorations">
             Дофамин
           </h3>
           <div class="content__block_article_text">
@@ -105,7 +109,7 @@
         </h2>
       <div class="content__block_content_box content__block_horizontal_content">
         <article class="content__block_article">
-            <h3 class="content__block_article_header">
+            <h3 class="content__block_article_header title-decorations">
                 Многозадачность
             </h3>
             <div class="content__block_article_text">
@@ -120,7 +124,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header">
+            <h3 class="content__block_article_header title-decorations">
                 Еда
             </h3>
             <div class="content__block_article_text">
@@ -134,7 +138,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header">
+            <h3 class="content__block_article_header title-decorations">
                 Гаджеты
             </h3>
             <div class="content__block_article_text">
@@ -156,12 +160,12 @@
         </h2>
       <div class="content__block_content_box">
         <article class="content__block_article">
-            <h3 class="content__block_article_header">
+            <h3 class="content__block_article_header title-decorations">
                 5 простых (на самом деле не очень) советов
             </h3>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header content__block_article_header_no_bold">
+            <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
                 Представьте небо и облака
             </h3>
             <div class="content__block_article_text">
@@ -178,7 +182,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header content__block_article_header_no_bold">
+            <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
                 Включите музыку
             </h3>
             <div class="content__block_article_text">
@@ -190,7 +194,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header content__block_article_header_no_bold">
+            <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
                 Прогуляйтесь
             </h3>
             <div class="content__block_article_text">
@@ -209,7 +213,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header content__block_article_header_no_bold">
+            <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
                 Хорошо ешьте
             </h3>
             <div class="content__block_article_text">
@@ -222,7 +226,7 @@
             </div>
         </article>
         <article class="content__block_article">
-            <h3 class="content__block_article_header content__block_article_header_no_bold">
+            <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
                 Читайте
             </h3>
             <div class="content__block_article_text">
@@ -237,26 +241,20 @@
     </section>
     <section class="content__block content__block_horizontal">
 
-            <h2 class="content__block_article_header">
+            <h2 class="content__block_article_header title-decorations">
                 А можно в картинках?
             </h2>
             <div class="content__gallery">
-                <img alt="Закат в горах" src="images/sunset.png" class="content__gallery_image image1">
-                <img alt="Веселое мороженое" src="images/ice-cream.png" class="content__gallery_image image2">
-                <img alt="Кассета" src="images/tape.png" class="content__gallery_image image3">
-                <img alt="Книги" src="images/books.png" class="content__gallery_image image4">
-                <img alt="Городская улица" src="images/street.png" class="content__gallery_image image5">
+                <img alt="Закат в горах" src="./images/sunset.png" class="content__gallery_image image1">
+                <img alt="Веселое мороженое" src="./images/ice-cream.png" class="content__gallery_image image2">
+                <img alt="Кассета" src="./images/tape.png" class="content__gallery_image image3">
+                <img alt="Книги" src="./images/books.png" class="content__gallery_image image4">
+                <img alt="Городская улица" src="./images/street.png" class="content__gallery_image image5">
             </div>
     </section>
 </main>
 <footer class="footer">
   <h2 class="footer__focus">focus</h2>
-  <div class="footer__decorations">
-    <div class="header__decorations_group">
-      <div class="header__decorations_item_top"></div>
-      <div class="header__decorations_item_bottom"></div>
-    </div>
-  </div>
 </footer>
 <script src="./scripts/script.js"></script>
 </body>
