--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns="http://www.w3.org/1999/html">
+<html lang="ru">
 <head>
     <link href="./fonts/fonts.css" rel="stylesheet">
     <link href="./styles/variables.css" rel="stylesheet" type="text/css">
