--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link href="./images/favicon.ico" rel="icon">
+    <link href="./images/favicon.svg" rel="icon" type="image/svg+xml">
     <link href="./fonts/fonts.css" rel="stylesheet">
     <link href="./styles/variables.css" rel="stylesheet" type="text/css">
     <link href="./styles/globals.css" rel="stylesheet" type="text/css">
@@ -41,33 +43,30 @@
             </li>
         </ul>
     </nav>
-    <h1 class="header__no_focus">no focus</h1>
+    <h1 class="header__no-focus focus-title">no focus</h1>
     <div class="header__title title-decorations">
         <p>Что делать, когда не можешь делать ничего</p>
         <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </div>
     <div aria-hidden="true" class="header__lighting">
         <div class="header__lighting_rec">REC</div>
-        <div class="header__lighting_ellipse"></div>
     </div>
 </header>
 <main class="content">
     <section class="content__block">
-        <h2 class="content__block_header">Почему сосредоточиться так сложно</h2>
-        <div class="content__block_content_box">
+        <h2 class="content__block_header content-header">Почему сосредоточиться так сложно</h2>
+        <div class="content__block_content-box">
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
+                <h3 class="content__block_header-article title-decorations content-header">
                     Многозадачность
                 </h3>
-                <div class="content__block_article_text">
+                <div class="content__block_article-text">
                     <p>
                         Особенно сложно сосредоточиться, когда задач много и все они — важные.
                         Где же легендарная многозадачность, когда она так нужна вам
                         (и всем нанимающим менеджерам этого мира)?
                         А дело в том, что её просто не существует. Исследователи
-                        <span class="link_decoration">
-                      <a href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>,
-                    </span>
+                        <a class="link" href="https://dana.org/article/multicosts-of-multitasking/">выяснили</a>,
                         что мозгу тяжело концентрироваться даже на двух делах одновременно.
                         А когда в поле внимания попадает несколько важных задач, организм паникует
                         и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого
@@ -76,10 +75,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
+                <h3 class="content__block_header-article title-decorations content-header">
                     Дофамин
                 </h3>
-                <div class="content__block_article_text">
+                <div class="content__block_article-text">
                     <p>
                         С гормонами стресса всё понятно, но дальше — ещё интереснее.
                         В нашей невозможности сосредоточиться замешана
@@ -95,16 +94,16 @@
             </article>
         </div>
     </section>
-    <section class="content__block content__block_horizontal">
-        <h2 class="content__block_header">
+    <section class="content__block content__block-horizontal">
+        <h2 class="content__block_header content-header">
             Что снижает концентрацию внимания?
         </h2>
-        <div class="content__block_content_box content__block_horizontal_content">
+        <div class="content__block_content-box content__block_horizontal-content">
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
+                <h3 class="content__block_header-article title-decorations content-header">
                     Многозадачность
                 </h3>
-                <div class="content__block_article_text">
+                <div class="content__block_article-text">
                     <p>
                         Как концентрация может снижаться из-за… концентрации?
                         Любая стрессовая ситуация (и резко меняющийся мир в целом)
@@ -116,10 +115,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
+                <h3 class="content__block_header-article title-decorations content-header">
                     Еда
                 </h3>
-                <div class="content__block_article_text">
+                <div class="content__block_article-text">
                     <p>
                         «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют
                         в мозг энергию и помогают ему лучше работать. Но уходит эта энергия также быстро,
@@ -130,10 +129,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
+                <h3 class="content__block_header-article title-decorations content-header">
                     Гаджеты
                 </h3>
-                <div class="content__block_article_text">
+                <div class="content__block_article-text">
                     <p>
                         Да-да, это та самая ситуация, когда на экране ноутбука — код,
                         в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами.
@@ -147,20 +146,18 @@
         </div>
     </section>
     <section class="content__block">
-        <h2 class="content__block_header">
+        <h2 class="content__block_header content-header">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)
         </h2>
-        <div class="content__block_content_box">
+        <div class="content__block_content-box">
+            <h3 class="content__block_header-article title-decorations content-header">
+                5 простых (на самом деле не очень) советов
+            </h3>
             <article class="content__block_article">
-                <h3 class="content__block_article_header title-decorations">
-                    5 простых (на самом деле не очень) советов
-                </h3>
-            </article>
-            <article class="content__block_article">
-                <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
+                <h4 class="content__block_header-article no-bold title-decorations content-header">
                     Представьте небо и облака
-                </h3>
-                <div class="content__block_article_text">
+                </h4>
+                <div class="content__block_article-text">
                     <p>
                         Или листья в ручье. Тут дело в лёгкой медитации,
                         которая помогает успокоиться. Ведь часто именно тревожные мысли
@@ -174,10 +171,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
+                <h4 class="content__block_header-article no-bold title-decorations content-header">
                     Включите музыку
-                </h3>
-                <div class="content__block_article_text">
+                </h4>
+                <div class="content__block_article-text">
                     <p>
                         Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями,
                         которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная.
@@ -186,16 +183,14 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
+                <h4 class="content__block_header-article no-bold title-decorations content-header">
                     Прогуляйтесь
-                </h3>
-                <div class="content__block_article_text">
+                </h4>
+                <div class="content__block_article-text">
                     <p>
                         Или даже пробегитесь. Лучше найти парк или лес:
                         один эксперимент
-                        <span>
-                <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>,
-                </span>
+                        <a class="link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>,
                         что созерцание природы повышает концентрацию,
                         в то время как после просмотра городских пейзажей она наоборот понижается.
                         Можно совместить прогулку с физическими упражнениями или бегом —
@@ -205,10 +200,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
+                <h4 class="content__block_header-article no-bold title-decorations content-header">
                     Хорошо ешьте
-                </h3>
-                <div class="content__block_article_text">
+                </h4>
+                <div class="content__block_article-text">
                     <p>
                         Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                         которые препятствуют резким скачкам сахара в крови. Например,
@@ -218,10 +213,10 @@
                 </div>
             </article>
             <article class="content__block_article">
-                <h3 class="content__block_article_header content__block_article_header_no_bold title-decorations">
+                <h4 class="content__block_header-article no-bold title-decorations content-header">
                     Читайте
-                </h3>
-                <div class="content__block_article_text">
+                </h4>
+                <div class="content__block_article-text">
                     <p>
                         Настоящие бумажные книги. Это правда помогает с концентрацией:
                         чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
@@ -232,21 +227,21 @@
             </article>
         </div>
     </section>
-    <section class="content__block content__block_horizontal">
-        <h2 class="content__block_article_header title-decorations">
+    <section class="content__block content__block-horizontal">
+        <h2 class="content__block_header-article title-decorations content-header">
             А можно в картинках?
         </h2>
         <div class="content__gallery">
-            <img alt="Закат в горах" class="content__gallery_image image1" src="./images/sunset.png">
-            <img alt="Веселое мороженое" class="content__gallery_image image2" src="./images/ice-cream.png">
-            <img alt="Кассета" class="content__gallery_image image3" src="./images/tape.png">
-            <img alt="Книги" class="content__gallery_image image4" src="./images/books.png">
-            <img alt="Городская улица" class="content__gallery_image image5" src="./images/street.png">
+            <img alt="Закат в горах" class="content__gallery_image image-sunset" src="./images/sunset.png">
+            <img alt="Веселое мороженое" class="content__gallery_image image-ice-cream" src="./images/ice-cream.png">
+            <img alt="Кассета" class="content__gallery_image image-tape" src="./images/tape.png">
+            <img alt="Книги" class="content__gallery_image image-books" src="./images/books.png">
+            <img alt="Городская улица" class="content__gallery_image image-street" src="./images/street.png">
         </div>
     </section>
 </main>
-<footer class="footer">
-    <h2 class="footer__focus">focus</h2>
+<footer class="footer decorated-zone">
+    <h2 class="footer__focus focus-title">focus</h2>
 </footer>
 <script src="./scripts/script.js"></script>
 </body>
