--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
             </div>
             <div aria-hidden="true" class="header__lighting">
-                <div class="header__lighting_rec">REC</div>
+                <div class="header__lighting-rec">REC</div>
             </div>
         </header>
         <main class="content">
